--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@
 title: Aleksandr Demshin
 email: demshin@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Blog of Aleksandr Demshin, QA Automation, Junior Web Developer (Java & JavaScript)
+  Blog of Aleksandr Demshin, SysOps
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://demshin.github.com" # the base hostname & protocol for your site
 twitter_username: demshin
-github_username:  demshin
+github_username: demshin
 
 # Build settings
 markdown: kramdown
@@ -21,7 +21,7 @@ timezone: Asia/Yekaterinburg
 
 # При выводе всех постов на одной странице используем постраничный вывод
 paginate: 5
-paginate_path: 'page:num'
+paginate_path: "page:num"
 
 # не публиковать посты, указанное время которых позднее времени момента публикации
 future: false
