--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: demshin@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Blog of Aleksandr Demshin, SysOps
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://demshin.github.com" # the base hostname & protocol for your site
+url: "https://demshin.github.com" # the base hostname & protocol for your site
 twitter_username: demshin
 github_username: demshin
 
