--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://demsh.in" # the base hostname & protocol for your site
 # twitter_username: demshin
 github_username: demshin
+lang: ru
 
 # Build settings
 markdown: kramdown
